cabal-version:      3.0
name:               brainfuck
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             ARATA Mizuki
maintainer:         minorinoki@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Brainfuck
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1,
                      vector ^>=0.13.2.0,
                      primitive ^>=0.9.0.0
    hs-source-dirs:   src
    default-language: GHC2021

executable simple-bf
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        brainfuck,
        primitive ^>=0.9.0.0

    hs-source-dirs:   simple-bf
    default-language: GHC2021

executable cps-bf
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1,
        brainfuck,
        mtl ^>=2.3.1,
        primitive ^>=0.9.0.0

    hs-source-dirs:   cps-bf
    default-language: GHC2021
